Version 1.2.0 TODO : Validation front/back, log better, tag (url/paginaiton)